[package]
name = "kapacitet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
